File Name: CHANGES

09/15/2015 FASP 1.7.9:
- Add new version of transpose, permutation, and sort for dCSRmat.
- Update paramters for SA AMG.
- Update regression results after changing SA parameters.
- Replace trans and sort by transz in UMFPACK and test.
- Fix and update some parameters in ini.

09/09/2015 FASP 1.7.8:
- Remove factor.f from the repo.
- Update VS10 to fix a directory problem in WIN32 configuration.
- Clean up Doxygen for a few functions.

09/04/2015 FASP 1.7.7:
- Replace the Fortran version of Schwarz smoother by the C version.
- Test V, AMLI, Nonlinear AMLI, F cycles with the Schwarz smoother.
- Update Doxygen and FASP webpage.
- Remove VS08; stop supporting Visual Studio before 2010.

08/19/2015 FASP 1.7.6:
- Update CMAKE and its modules.
- Fix UMFPACK and MUMPS link problems.
- Add util/fix_fenics.sh script and fix FEniCS conf problems.
- Add fasp.mk for user-specific make options.
- Add a warning when CC and FC version does not match.
- Add and update Q&A for install problems. 
- Reformat Makefile output.
- Update FASP webpage and Doxygen.

07/19/2015 FASP 1.7.5:
- Fix a bug: a memory problem in AMG for BSR format.
- Fix a few typos in pcg.
- Fix undefined Doxygen function.
- Update release version compiler options in Makefile.
- Revert test/ini/input.dat.
- Update website and documentation.
- Update regression test results using GCC 4.9.2.

06/14/2015 FASP 1.7.4:
- Test very small tolerance: machine eps.
- Test on OS X 10.10.3 with GCC 4.9.2: works fine.
- Fix convergence problem in regression test when using DIAG_PERF.
- Update the regression test results. 
- Modify cmake Doxygen output: If not present, does not print warning.
- Update README. 
- Update the web, documentation, etc.

05/10/2015 FASP 1.7.3:
- Fix a bug: cmake does not recognize CC env variable sometimes.
- Fix a bug: ILU static memory allocation causes seg fault for large problems.
- Fix a bug: ILU "implicit none" missing.