@@ -2,6 +2,6 @@
 
 ## This shell command generates statistics of FASP files in the ./log/FILES.
 
-wc -l ./base/include/*.h ./base/src/*.inl ./base/src/*.f ./base/src/*.c > ./log/FILES
+wc -l ./base/include/*.h ./base/src/*.inl ./base/src/*.c > ./log/FILES
 
 
